data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_804.wast
;; 5. **Test Unconditional to Conditional Branch Mismatches**:    - Create a `loop` with `br_if` instructions inside, designed to handle a condition that never branches correctly due to operand stack inconsistencies.    - **Constraint**: Proper handling of conditional branches.    - **CFG Impact**: Failing to branch conditionally correctly can create dead paths or unreachable code.

(assert_invalid
  (module (func $test_unconditional_to_conditional_branch_mismatch
    (loop (result i32)
      (i32.const 0)
      (br_if 0 (i32.const 1))
      (i32.const 2)
      (br_if 0 (i32.const 0))
    )
  ))
  "type mismatch"
)